# merlin

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_instructions.txt  format.sh  main  main.cpp  merlin  todo
.github/workflows/: build.yml  test.yml  tests.yml
src/: main.cpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: nodes.cpp  parser.cpp  parser.hpp
src/termcolor/: termcolor.hpp
src/trc/: trc.cpp
